<resources>
    <string name="app_name">Porcum Ipsum</string>
    <string name="generator">Generator</string>
    <string name="picker" translatable="false">Picker</string>
    <string name="list">List</string>
    <string name="par_number">Number of paragraphs</string>
    <string name="min_chars">Min chars</string>
    <string name="insert_commas">Insert commas</string>
    <string name="generate">Generate</string>
    <string name="start_text">Click generate button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="coming_soon">Coming soon</string>
    <string name="clipboard_copy">Copied to clipboard</string>
    <string name="invalid_params">Invalid parameters</string>
    <string name="too_high_numbers">Insert lower numbers</string>
    <string name="pick_random">Pick random</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="saved_gallery">Saved to gallery</string>
    <string name="save_gallery">Save to gallery</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="remove_favourite">Remove from favourites</string>
    <string name="added">Added</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="app_info_tab"><u>More info</u></string>
    <string name="visit_website">Visit website</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="error_saving">Unable to save file</string>
</resources>