<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/roundedBox"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="12dp"
    android:paddingHorizontal="18dp"
    android:paddingVertical="12dp">

    <TextView
        android:id="@+id/text_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list"
        android:textSize="18sp"
        android:layout_marginEnd="12dp"/>

    <ImageButton style="@style/optionImageBtn"
        android:id="@+id/copy_button"
        android:src="@drawable/ic_baseline_content_copy_24"
        android:backgroundTint="@color/alpha"
        android:contentDescription="@string/copy" />

    <ImageButton style="@style/optionImageBtn"
        android:id="@+id/delete_button"
        android:src="@drawable/ic_baseline_delete_forever_24"
        android:backgroundTint="@color/alpha"
        android:contentDescription="@string/delete" />
</LinearLayout>